--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página Inicial</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="script.js"></script>
+
 </head>
 <body>
-    <nav>
-        <div class="navigation">
-            <p class="teams">TIMES</p>
-            <p class="players">JOGADORES</p>
-            <P class="championship">COMPETIÇÃO</P>
-        </div>
-    </nav>
-    <img src="https://upload.wikimedia.org/wikipedia/pt/9/9b/116px-UEFA_Champions_League_logo_2_svg.png" alt="Champions-League" class="logo">
+    
 </body>
 </html>
