--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
-    <link rel="icon" href="/img/logo.png" type="image/png">
+    <link rel="icon" href="/img/nextpc.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #1f692d;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0d8f25;">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="/img/logo-sem-fundo.png" alt="Logo" width="50" height="50"
+            <a class="navbar-brand">
+                <img src="/img/nextpc.png" alt="Logo" width="50" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -61,6 +61,27 @@
             </div>
         </div>
     </nav>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/img/SSD_M.2.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">SSD Lexar NM1090</h5>
+                    <p class="card-text">SSD Lexar NM1090, 1TB, M.2 2280, PCIe NVMe, Leitura 12000MB/s, Gravacao 11000MB/s, LNM1090001T-RNANG</p>
+                    <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/img/hd.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">HD Seagate Skywawk</h5>
+                    <p class="card-text">HD Seagate Skywawk, 1TB, 3.5, 5400 RPM, Sata III 6GB/s, Cache 256MB, ST1000VX013</p>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
-
 </html>
