--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
-    <link rel="icon" href="/img/nextpc.png" type="image/png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<html lang="pt-BR">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Página Inicial</title>
+      <link rel="icon" href="/img/nextpc.png" type="image/png">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+          crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0d8f25;">
         <div class="container">
             <a class="navbar-brand">
-                <img src="/img/nextpc.png" alt="Logo" width="50" height="50"
+                <img src="/img/nextpc.png" alt="Logo" width="70" height="70"
                     class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,11 +56,18 @@
                 <form class="d-flex" role="search">
                     <input class="form-control form-control-sm me-2" type="search" placeholder="Procure o que deseja"
                         aria-label="Search" style="max-width: 200px;">
-                    <button class="btn btn-outline-light" type="submit">Pesquisar</button>
+                    <button class="btn btn-outline-light" type="submit">
+                        <i class="bi bi-search"></i>
+                    </button>
                 </form>
             </div>
         </div>
     </nav>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container-2">
+          <p class="lead">PRINCIPAIS PRODUTOS</p>
+        </div>
+      </div>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="card" style="width: 18rem;">
@@ -68,7 +75,7 @@
                 <div class="card-body">
                     <h5 class="card-title">SSD Lexar NM1090</h5>
                     <p class="card-text">SSD Lexar NM1090, 1TB, M.2 2280, PCIe NVMe, Leitura 12000MB/s, Gravacao 11000MB/s, LNM1090001T-RNANG</p>
-                    <p class="card-text"></p>
+                    <p class="preco"><br>R$ 1.629,99</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
@@ -77,11 +84,74 @@
                 <div class="card-body">
                     <h5 class="card-title">HD Seagate Skywawk</h5>
                     <p class="card-text">HD Seagate Skywawk, 1TB, 3.5, 5400 RPM, Sata III 6GB/s, Cache 256MB, ST1000VX013</p>
+                    <p class="preco"><br><br>R$ 449,99</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="/img/amd_r7_5800x.webp" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Processador AMD Ryzen 7 5800X</h5>
+                  <p class="card-text">Processador AMD Ryzen 7 5800X, 8-Core, 16-Threads, 3.8GHz (4.7GHz Turbo), Cache 36MB, AM4, 100-100000063WOF</p>
+                  <p class="preco"><br>R$ 1.399,99</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+              </div>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="/img/z790-aorus-elite.webp" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Placa Mae Gigabyte Z790</h5>
+                <p class="card-text">Placa Mae Gigabyte Z790 Aorus Elite X AX, WiFi, DDR5, LGA 1700, ATX, Chipset Intel Z790, Z790-AORUS-ELITE-X-AX</p>
+                <p class="preco"><br>R$ 2.399,99</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="/img/memoria_ddr5_branca.webp" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Memoria Adata XPG Lancer Blade</h5>
+                <p class="card-text">Memoria Adata XPG Lancer Blade, RGB, 8GB (1x8GB), DDR5, 5600MHz, C46, Branco, AX5U5600C468G-SLABRWH</p>
+                <p class="preco"><br>R$ 289,99</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="/img/rtx_5070.webp" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">MSI GeForce RTX 5070</h5>
+                <p class="card-text">Placa de Video MSI GeForce RTX 5070 Gaming Trio OC, 12GB, GDDR7, 192-bit, G5070-12GTC </p>
+                <p class="preco"><br><br>R$ 6.899,99</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="/img/fonte_corsair_1200_branca.webp" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Fonte Corsair RM1200x Shift</h5>
+                <p class="card-text">Fonte Corsair RM1200x Shift, 1200W, Full-Modular, 80 Plus Gold, Branco, CP-9020276-BR</p>
+                <p class="preco"><br><br>R$ 1.499,99</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="/img/air_cooler_branco.webp" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Air Cooler Master Hyper 622 Halo</h5>
+                <p class="card-text">Cooler Para Processador Cooler Master Hyper 622 Halo White, RGB, 120mm, Branco, RR-D6WW-20PA-R1</p>
+                <p class="preco"><br><br>R$ 579,99</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="/img/360_water_cooler.webp" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Water Cooler Corsair</h5>
+                <p class="card-text">Water Cooler Corsair Icue H150i Elite LCD XT, RGB, 360mm, Branco, CW-9060077-WW</p>
+                <p class="preco"><br><br>R$ 1.989,99</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
         </div>
-    </div>
     </div>
 </body>
 </html>
