--- a/pages/fonte.html
+++ b/pages/fonte.html
@@ -29,10 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link text-white" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Link</a>
+                        <a class="nav-link text-white" href="/index.html">
+                            <i class="bi bi-house-fill"></i>
+                        </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
@@ -50,7 +49,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled text-light" href="#">Disabled</a>
+                      <a class="nav-link text-white" href="#" data-bs-toggle="modal" data-bs-target="#cartModal">
+                        <i class="bi bi-cart"></i> Carrinho
+                      </a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -76,7 +77,7 @@
                     <h5 class="card-title">Fonte Corsair RM1200x Shift</h5>
                     <p class="card-text">Fonte Corsair RM1200x Shift, 1200W, Full-Modular, 80 Plus Gold, Branco, CP-9020276-BR</p>
                     <p class="preco"><br><br>R$ 1.499,99</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="#" class="btn btn-primary add-to-cart" data-name="Fonte Corsair RM1200x Shift" data-price="1499.99">Comprar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -85,7 +86,7 @@
                     <h5 class="card-title">Fonte Asus TUF Gaming</h5>
                     <p class="card-text">Fonte Asus TUF Gaming White Edition, 1000W, Full-Modular, 80 Plus Gold, TUF-GAMING-1000G-WHITE</p>
                     <p class="preco"><br><br>R$ 1.599,99</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="#" class="btn btn-primary add-to-cart" data-name="Fonte Asus TUF Gaming" data-price="1599.99">Comprar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -94,7 +95,7 @@
                   <h5 class="card-title">Fonte Asus ROG THOR 1000W</h5>
                   <p class="card-text">Fonte Asus ROG THOR 1000W Platinum II, RGB, Full Modular, 80 Plus Platinum, ROG-THOR-1000P2-GAMING</p>
                   <p class="preco"><br>R$ 2.799,99</p>
-                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-primary add-to-cart" data-name="Fonte Asus ROG THOR 1000W" data-price="2799.99">Comprar</a>
                 </div>
               </div>
             <div class="card" style="width: 18rem;">
@@ -103,10 +104,31 @@
                 <h5 class="card-title">Fonte Cooler Master MWE Gold</h5>
                 <p class="card-text">Fonte Cooler Master MWE Gold V2 1250, 1250W, PCI-e 5.0, Full Modular, 80 Plus Gold, Preta, MPE-C501-AFCAG-3WO</p>
                 <p class="preco"><br>R$ 1.469,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="#" class="btn btn-primary add-to-cart" data-name="Fonte Cooler Master MWE Gold" data-price="1469.99">Comprar</a>
               </div>
             </div>
         </div>
     </div>
-</body>
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="cartModalLabel">Carrinho de Compras</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <ul id="cart-items" class="list-group mb-3">
+              <!-- Os itens do carrinho serão adicionados aqui dinamicamente -->
+            </ul>
+            <p class="text-end fw-bold">Total: R$ <span id="cart-total">0.00</span></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            <button type="button" class="btn btn-primary">Finalizar Compra</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="/script.js"></script>
+  </body>
 </html>
