--- a/pages/placa-video.html
+++ b/pages/placa-video.html
@@ -29,10 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link text-white" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Link</a>
+                        <a class="nav-link text-white" href="/index.html">
+                          <i class="bi bi-house-fill"></i>
+                        </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
@@ -50,7 +49,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled text-light" href="#">Disabled</a>
+                      <a class="nav-link text-white" href="#" data-bs-toggle="modal" data-bs-target="#cartModal">
+                        <i class="bi bi-cart"></i> Carrinho
+                      </a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -71,87 +72,63 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/img/SSD_M.2.jpg" alt="Card image cap">
+                <img class="card-img-top" src="/img/rtx_5070.webp" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">SSD Lexar NM1090</h5>
-                    <p class="card-text">SSD Lexar NM1090, 1TB, M.2 2280, PCIe NVMe, Leitura 12000MB/s, Gravacao 11000MB/s, LNM1090001T-RNANG</p>
-                    <p class="preco"><br>R$ 1.629,99</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <h5 class="card-title">MSI GeForce RTX 5070</h5>
+                    <p class="card-text">Placa de Video MSI GeForce RTX 5070 Gaming Trio OC, 12GB, GDDR7, 192-bit, G5070-12GTC</p>
+                    <p class="preco"><br><br>R$ 6.899,99</p>
+                    <a href="#" class="btn btn-primary add-to-cart" data-name="MSI GeForce RTX 5070" data-price="6899.99">Comprar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/img/hd.jpg" alt="Card image cap">
+                <img class="card-img-top" src="/img/rtx_5090.webp" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">HD Seagate Skywawk</h5>
-                    <p class="card-text">HD Seagate Skywawk, 1TB, 3.5, 5400 RPM, Sata III 6GB/s, Cache 256MB, ST1000VX013</p>
-                    <p class="preco"><br><br>R$ 449,99</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <h5 class="card-title">GeForce RTX 5090 Aorus</h5>
+                    <p class="card-text">Gigabyte GeForce RTX 5090 Aorus Master Ice, 32GB, GDDR7, 512-bit, GV-N5090AORUS-M-ICE-32GD</p>
+                    <p class="preco"><br><br>R$ 27.999,99</p>
+                    <a href="#" class="btn btn-primary add-to-cart" data-name="GeForce RTX 5090 Aorus" data-price="27999.99">Comprar</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/img/amd_r7_5800x.webp" alt="Card image cap">
+                <img class="card-img-top" src="/img/rx-9070xt.webp" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Processador AMD Ryzen 7 5800X</h5>
-                  <p class="card-text">Processador AMD Ryzen 7 5800X, 8-Core, 16-Threads, 3.8GHz (4.7GHz Turbo), Cache 36MB, AM4, 100-100000063WOF</p>
-                  <p class="preco"><br>R$ 1.399,99</p>
-                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <h5 class="card-title">RX 9070 XT Mercury OC Gaming</h5>
+                  <p class="card-text">RX 9070 XT Mercury OC Gaming Edition, 16GB, GDDR6, 256-bit, RX-97TRGBBB9</p>
+                  <p class="preco"><br><br>R$ 7.499,99</p>
+                  <a href="#" class="btn btn-primary add-to-cart" data-name="RX 9070 XT Mercury OC Gaming" data-price="7499.99">Comprar</a>
                 </div>
               </div>
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="/img/z790-aorus-elite.webp" alt="Card image cap">
+              <img class="card-img-top" src="/img/rx_9070.webp" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Placa Mae Gigabyte Z790</h5>
-                <p class="card-text">Placa Mae Gigabyte Z790 Aorus Elite X AX, WiFi, DDR5, LGA 1700, ATX, Chipset Intel Z790, Z790-AORUS-ELITE-X-AX</p>
-                <p class="preco"><br>R$ 2.399,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="/img/memoria_ddr5_branca.webp" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Memoria Adata XPG Lancer Blade</h5>
-                <p class="card-text">Memoria Adata XPG Lancer Blade, RGB, 8GB (1x8GB), DDR5, 5600MHz, C46, Branco, AX5U5600C468G-SLABRWH</p>
-                <p class="preco"><br>R$ 289,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="/img/rtx_5070.webp" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">MSI GeForce RTX 5070</h5>
-                <p class="card-text">Placa de Video MSI GeForce RTX 5070 Gaming Trio OC, 12GB, GDDR7, 192-bit, G5070-12GTC </p>
-                <p class="preco"><br><br>R$ 6.899,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="/img/fonte_corsair_1200_branca.webp" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Fonte Corsair RM1200x Shift</h5>
-                <p class="card-text">Fonte Corsair RM1200x Shift, 1200W, Full-Modular, 80 Plus Gold, Branco, CP-9020276-BR</p>
-                <p class="preco"><br><br>R$ 1.499,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="/img/air_cooler_branco.webp" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Air Cooler Master Hyper 622 Halo</h5>
-                <p class="card-text">Cooler Para Processador Cooler Master Hyper 622 Halo White, RGB, 120mm, Branco, RR-D6WW-20PA-R1</p>
-                <p class="preco"><br><br>R$ 579,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="/img/360_water_cooler.webp" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Water Cooler Corsair</h5>
-                <p class="card-text">Water Cooler Corsair Icue H150i Elite LCD XT, RGB, 360mm, Branco, CW-9060077-WW</p>
-                <p class="preco"><br><br>R$ 1.989,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <h5 class="card-title">RX 9070 Challenger</h5>
+                <p class="card-text">AsRock Radeon RX 9070 Challenger, 16GB, GDDR6, 256-bit, 90-GA5NZZ-00UANF</p>
+                <p class="preco"><br><br>R$ 6.499,99</p>
+                <a href="#" class="btn btn-primary add-to-cart" data-name="RX 9070 Challenger" data-price="6499.99">Comprar</a>
               </div>
             </div>
         </div>
     </div>
-</body>
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="cartModalLabel">Carrinho de Compras</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <ul id="cart-items" class="list-group mb-3">
+              <!-- Os itens do carrinho serão adicionados aqui dinamicamente -->
+            </ul>
+            <p class="text-end fw-bold">Total: R$ <span id="cart-total">0.00</span></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            <button type="button" class="btn btn-primary">Finalizar Compra</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="/script.js"></script>
+  </body>
 </html>
